many api fixes
